kubernetes/apps/networking/authelia/app/authelia-auth.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: networking-authelia
  namespace: networking
  labels:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/name: authelia
spec:
  forwardAuth:
    address: http://authelia.networking.svc.cluster.local:9091/api/verify?rd=https%3A%2F%2Fauth.${SECRET_DOMAIN_NAME}%2F
    authResponseHeaders:
      - Remote-User
      - Remote-Name
      - Remote-Email
      - Remote-Groups
