kubernetes/apps/networking/authelia/app/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`auth.${SECRET_DOMAIN}`)
      services:
        - kind: Service
          name: authelia
          namespace: networking
          port: 80
      middlewares:
        - name: headers
          namespace: networking

  tls:
    secretName: auth.${DOMAIN_EXTERNAL}
