kubernetes/apps/networking/authelia/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.home.arpa/enabled: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/hostname: authelia.${SECRET_DOMAIN}
    hajimari.io/enable: "true"
    hajimari.io/icon: mdi:floppy-disk
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-middleware-chains-default
  #subdomain: authelia
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "authelia.${SECRET_DOMAIN}"
      secretName: "authelia-tls"
  rules:
    - host: "authelia.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authelia
                port:
                  number: 9091
